--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "tiny-node-rest",
   "version": "1.0.0",
   "description": " Does a very specific thing i happen to need, that's it.",
-  "main": "main.js",
+  "main": "rest-server.mjs",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node rest-server.mjs"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
     "personal"
   ],
   "author": "Faurin Littlepaws",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
