--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Faurin Littlepaws",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.7"
   }
 }
